--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --header-bg-light: #fff;
+  --header-text-light: #000;
+  --header-bg-dark: #000;
+  --text-light: #fff;
+  --text-dark: #000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --bg-light: var(--header-bg-light);
+    --text-light: var(--text-light);
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (prefers-color-scheme: light) {
+  :root {
+    --header-bg: var(--header-bg-light);
+    --text-dark: var(--text-dark);
+  }
 }
