--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   --text-dark: #000;
 }
 
+html {
+  font-size: 16px;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --bg-light: var(--header-bg-light);
