--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -3,30 +3,30 @@
 @tailwind utilities;
 
 @layer utilities {
-  .hero-clip-path {
+  .back-clip-path {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 10vw));
   }
 
-  .hero-clip-path-inverse {
+  .back-clip-path-inverse {
     clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
   }
 
   @media screen and (max-width: 768px) {
-    .hero-clip-path {
+    .back-clip-path {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 15vw));
     }
 
-    .hero-clip-path-inverse {
+    .back-clip-path-inverse {
       clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20vw), 0 100%);
     }
   }
 
   @media screen and (max-width: 480px) {
-    .hero-clip-path {
+    .back-clip-path {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 70vw));
     }
 
-    .hero-clip-path-inverse {
+    .back-clip-path-inverse {
       clip-path: polygon(0 0, 100% 0, 100% calc(100% - 25vw), 0 100%);
     }
   }
