--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -11,6 +11,10 @@
     clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
   }
 
+  .back-clip-path-inverse-bottom {
+    clip-path: polygon(100% 0%, 100% 0, 100% 100%, -100% 80%);
+  }
+
   @media screen and (max-width: 768px) {
     .back-clip-path {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 15vw));
@@ -18,6 +22,10 @@
 
     .back-clip-path-inverse {
       clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20vw), 0 100%);
+    }
+
+    .back-clip-path-inverse-bottom {
+      clip-path: polygon(100% 0%, 100% 0, 100% 100%, 0 100%);
     }
   }
 
@@ -28,6 +36,10 @@
 
     .back-clip-path-inverse {
       clip-path: polygon(0 0, 100% 0, 100% calc(100% - 25vw), 0 100%);
+    }
+
+    .back-clip-path-inverse-bottom {
+      clip-path: polygon(100% 0%, 100% 0, 100% 100%, 0 100%);
     }
   }
 }
